# etf-grid-design

./: .env.example  .gitignore  API_Protocol.md  CHANGELOG.md  Dockerfile  Phase_01.md  Phase_02.md  Phase_03.md  Phase_04.md  README.md  README_重构计划.md  Stage_1.md  Stage_2.md  Stage_3.md  Stage_4.md  pyproject.toml  requirements.txt  start.bat  start.sh  story.md
.clinerules/: backend.md
backend/: app.py  app.py.bak  app_production.py  run.py  test_atr_optimization.py  test_frequency_logic.py
backend/algorithms/atr/: analyzer.py
backend/algorithms/grid/: arithmetic_grid.py  geometric_grid.py  optimizer.py
backend/api/: middleware.py  schemas.py
backend/api/routes/: analysis_routes.py  health_routes.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analysis_routes.py  etf_routes.py  system_routes.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  atr_engine.py  (+2 more)
backend/config/: __init__.py  constants.py  validation.py  version.py
backend/models/: analysis.py  etf.py  strategy.py  validators.py
backend/services/: atr_engine.py  backtest_engine.py  data_service.py  etf_analysis_service.py  etf_analyzer.py  frequency_calculator.py  grid_calculator.py  grid_strategy.py  simple_cache.py  suitability_analyzer.py  tushare_client.py
backend/tests/: conftest.py
backend/utils/: helpers.py
deploy/: .env.production  entrypoint.sh  gunicorn.conf.py  start.sh
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
scripts/: update_version.py
(+102 files in other folders)
